--- a/fornecedor/build.gradle
+++ b/fornecedor/build.gradle
@@ -16,6 +16,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.1.4'
+	implementation 'org.springframework.cloud:spring-cloud-config-client:3.1.4'
+	implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:3.1.4'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
