--- a/loja/build.gradle
+++ b/loja/build.gradle
@@ -15,6 +15,8 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web:2.7.5'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.1.4'
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.1.4'
+	implementation 'org.springframework.cloud:spring-cloud-openfeign:3.1.4'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.5'
 }
 
